--- a/debian/control
+++ b/debian/control
@@ -2,16 +2,80 @@ Source: ubuntu-desktop-meta
 Priority: optional
 Section: metapackages
 Maintainer: Dimitry Ishenko <dimitry.ishenko@gmail.com>
-Build-Depends: debhelper-compat (= 12)
+Build-Depends:
+ debhelper-compat (= 12),
 Standards-Version: 4.6.0
 Rules-Requires-Root: no
 
 Package: ubuntu-desktop-meta
 Architecture: all
-Depends: ubuntu-desktop-minimal
-Recommends: baobab, branding-ubuntu, cheese, cryptsetup, evolution, font-manager, fonts-comfortaa, fonts-courier-prime, fonts-droid-fallback, fonts-font-awesome, fonts-firacode, fonts-freefont-otf, fonts-go, fonts-inconsolata, fonts-jetbrains-mono-nerd | fonts-jetbrains-mono, fonts-liberation, fonts-liberation2, fonts-linuxlibertine, fonts-lmodern, fonts-open-sans, fonts-opensymbol, fonts-powerline, fonts-roboto, fonts-roboto-mono, fonts-roboto-slab, fonts-source-code-pro, fonts-stix, fonts-tuffy, fonts-ubuntu, gnome-calendar, gnome-shell-extension-manager, gnome-shell-extensions, gnome-todo, gnome-tweaks, gucharmap, libreoffice-calc, libreoffice-gnome, libreoffice-impress, libreoffice-math, libreoffice-ogltrans, libreoffice-writer, mediainfo, mpv, mpv-mpris, nautilus-image-converter, seahorse, simple-scan, transmission-gtk, ttf-xfree86-nonfree, web-devicons-nvim
-Provides: anacron
-Conflicts: anacron, apport, brltty, gnome-font-viewer, kerneloops, orca, snapd, ubuntu-report, unattended-upgrades, whoopsie
-Replaces: anacron
+Depends:
+ ubuntu-desktop-minimal,
+Recommends:
+ baobab,
+ branding-ubuntu,
+ cheese,
+ cryptsetup,
+ evolution,
+ font-manager,
+ fonts-comfortaa,
+ fonts-courier-prime,
+ fonts-droid-fallback,
+ fonts-firacode,
+ fonts-font-awesome,
+ fonts-freefont-otf,
+ fonts-go,
+ fonts-inconsolata,
+ fonts-jetbrains-mono-nerd | fonts-jetbrains-mono,
+ fonts-liberation,
+ fonts-liberation2,
+ fonts-linuxlibertine,
+ fonts-lmodern,
+ fonts-open-sans,
+ fonts-opensymbol,
+ fonts-powerline,
+ fonts-roboto,
+ fonts-roboto-mono,
+ fonts-roboto-slab,
+ fonts-source-code-pro,
+ fonts-stix,
+ fonts-tuffy,
+ fonts-ubuntu,
+ gnome-calendar,
+ gnome-shell-extension-manager,
+ gnome-shell-extensions,
+ gnome-todo,
+ gnome-tweaks,
+ gucharmap,
+ libreoffice-calc,
+ libreoffice-gnome,
+ libreoffice-impress,
+ libreoffice-math,
+ libreoffice-ogltrans,
+ libreoffice-writer,
+ mediainfo,
+ mpv,
+ mpv-mpris,
+ nautilus-image-converter,
+ seahorse,
+ simple-scan,
+ transmission-gtk,
+ ttf-xfree86-nonfree,
+ web-devicons-nvim,
+Provides:
+ anacron,
+Conflicts:
+ anacron,
+ apport,
+ brltty,
+ gnome-font-viewer,
+ kerneloops,
+ orca,
+ snapd,
+ ubuntu-report,
+ unattended-upgrades,
+ whoopsie,
+Replaces:
+ anacron,
 Description: ubuntu-desktop-meta
  Ubuntu desktop meta-package
